--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0;
+    padding: 0;
+    
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #021932f1;
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+    height: 100vh;
+}
+
+section {
+    width: 100%;
+    height: 100%;
+}
