--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,5 +4,14 @@
         <div class="name">Gabriele Ferrigno</div>
         <div class="description">I'm a software engineer specialized in front-end development, i enhance the web experience by creating intuitive and responsive user interfaces using the latest web technologies.
         </div>
+        <div class="about-links">
+            <img (click)="navigate('https://github.com/gabrif9')" src="links-logo/github.svg" alt="github logo">
+            <img (click)="navigate('https://www.instagram.com/gabri9f/')" src="links-logo/instagram.svg" alt="instagram logo">
+            <img (click)="navigate('https://www.linkedin.com/in/gabriele-ferrigno-8118a4147')" src="links-logo/linkedin.svg" alt="linkedin logo">
+            <a href="mailto:gabrieleferrigno95@gmail.com">
+                <img src="links-logo/gmail.svg" alt="gmail logo">
+            </a>
+            
+        </div>
     </div>
 </div>
