--- a/src/app/components/tech-bubble/tech-bubble.component.css
+++ b/src/app/components/tech-bubble/tech-bubble.component.css
@@ -7,7 +7,7 @@
     border-radius: 40px;
     padding: 5px 8px;
     color: #02c39a;
-    background-color: #10796f;
+    background-color: #10796f4a;
     font-weight: 500;
 }
 
