--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,9 +1,12 @@
 <div class="experience-container">
     <div class="experience-list">
-        <div class="experience-item">
+        <div (click)="navigate('https://www.nextworks.it/it/')" class="experience-item">
             <div class="experience-header">
                 <div class="experience-title">
                     Nextworks
+                        <span style="font-size:18px;" class="material-symbols-outlined">
+                            open_in_new
+                            </span>
                 </div>
                 <div class="experience-date">
                     2023 - Present
