--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
-* {
+*, html {
     margin: 0;
     padding: 0;
     
     box-sizing: border-box;
+}
+
+html {
+    overflow-x: hidden;
 }
 
 body {
@@ -11,9 +15,9 @@ body {
     font-family: "Montserrat", sans-serif;
     font-style: normal;
     height: 100vh;
+    overflow-x: hidden;
 }
 
-section {
-    width: 100%;
-    height: 100%;
+::-webkit-scrollbar {
+    display: none;
 }
