feat: add home component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-header></app-header>
+<section  id="home">
+    <app-home></app-home>
+</section>
 <section id="about">
     <app-about></app-about>
 </section>
