--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,17 +1,19 @@
 <div class="about-container">
+    
     <div class="about-content">
-        <div class="title">Hi, my name is</div>
-        <div class="name">Gabriele Ferrigno</div>
-        <div class="description">I'm a software engineer specialized in front-end development, i enhance the web experience by creating intuitive and responsive user interfaces using the latest web technologies.
+        <div class="vertical-line">
         </div>
-        <div class="about-links">
-            <img (click)="navigate('https://github.com/gabrif9')" src="links-logo/github.svg" alt="github logo">
-            <img (click)="navigate('https://www.instagram.com/gabri9f/')" src="links-logo/instagram.svg" alt="instagram logo">
-            <img (click)="navigate('https://www.linkedin.com/in/gabriele-ferrigno-8118a4147')" src="links-logo/linkedin.svg" alt="linkedin logo">
-            <a href="mailto:gabrieleferrigno95@gmail.com">
-                <img src="links-logo/gmail.svg" alt="gmail logo">
-            </a>
-            
+        <div>
+            <div class="about-title">
+                About Me
+            </div>
+            <div class="about-description">
+                Let me introduce myself: I'm a software developer with a passion for front-end development, i enjoy almost everything
+                related to technology.
+                Outside of the programming world, I'm particularly like 3D printing and 3d modeling.
+                And of course, I love videogames! Right now i'm playing the best game ever made, League of Legends <span>/s</span>. 
+            </div>
         </div>
+        
     </div>
 </div>
