--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,5 +1,18 @@
 <div class="menu-entries">
-    <button (click)="scrollTo('about')" class="menu-option">About</button>
-    <button (click)="scrollTo('technologies')" class="menu-option">Technologies</button>
-    <button (click)="scrollTo('experience')" class="menu-option">Experience</button>
+    <button (click)="scrollTo('home')" class="menu-option">
+        HOME
+        <div class="menu-underscore"></div>
+    </button>
+    <button (click)="scrollTo('about')" class="menu-option">
+        ABOUT
+        <div class="menu-underscore"></div>
+    </button>
+    <button (click)="scrollTo('technologies')" class="menu-option">
+        TECHNOLOGIES
+        <div class="menu-underscore"></div>
+    </button>
+    <button (click)="scrollTo('experience')" class="menu-option">
+        EXPERIENCE
+        <div class="menu-underscore"></div>
+    </button>
 </div>
