feat: add hamburger menu icon and logic to open the sidebar

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -25,5 +25,35 @@
 .menu {
     display: flex;
     align-items: center;
-    padding-right: 2rem;
+    padding-right: 1rem;
 }
+
+@media screen and (max-width: 800px) {
+    .menu {
+        display: none;
+    }
+}
+
+.menu-icon {
+    display: flex;
+    align-items: center;
+    margin-right: 2rem;
+}
+
+@media screen and (min-width: 800px) {
+    .menu-icon {
+        display: none;
+    }
+}
+
+div span {
+    font-size: 32px; 
+    color: #B6C7C6;
+    cursor: pointer;
+}
+
+
+
+
+
+
