--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,4 +1,5 @@
 <div class="experience-container">
+    <div class="experience-section-title">Experience</div>
     <div class="experience-list">
         <div (click)="navigate('https://www.nextworks.it/it/')" class="experience-item">
             <div class="experience-header">
@@ -19,7 +20,8 @@
                 Using Cypress to test, GitLab CI/CD for continuous integration and deployment, and NGINX as the web server. 
                 Additionally, I have experience with Keycloak to implement authentication mechanisms on some of these interfaces.
             </div>
-                <app-tech-bubble [bubbleNameInput]="bubbleTech"></app-tech-bubble>
+            <app-tech-bubble [bubbleNameInput]="bubbleTech"></app-tech-bubble>
+            
         </div>
     </div>
 </div>
