feat: change tab logo and tab name, add home in the sidebar

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -13,6 +13,9 @@
         
         <div class="sidebar-menu-list">
             <ul>
+                <li (click)="scrollTo('home')" class="sidebar-item">
+                    HOME
+                </li>
                 <li (click)="scrollTo('about')" class="sidebar-item">
                     ABOUT
                 </li>
